base de datos creada

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 JWT_SECRET=clave_super_secreta
 
 # Conexión a MongoDB Atlas (reemplazar URI real)
-MONGO_URI=mongodb+srv://usuario:contraseña@cluster.mongodb.net/ceiflix?retryWrites
+MONGO_URI=mongodb+srv://perezjhon2010:1hKVTf6MfAf5QHV1@cei.zlxoevq.mongodb.net/ceiflix
 
 # API KEY de TMDB (para usar en fetch desde el backend)
 TMDB_API_KEY=0fb2e8b2e0b15ae4f8718665caedcacd
