conexion con mongo

--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ TMDB_ACCESS_TOKEN=eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiIwZmIyZThiMmUwYjE1YWU0Zjg3MTg2N
 # Puerto del servidor
 PORT=5000
 
+DOMAIN = http://localhost
+
